--- a/public/user/stylesheets/styles.css
+++ b/public/user/stylesheets/styles.css
@@ -691,6 +691,9 @@ mentio-menu {
     font-size: 12px;
     line-height: 48px; }
 
+.md-datepicker-input-mask {
+  overflow: hidden; }
+
 /* fonts */
 .cloud-container {
   align-items: center;
